2019-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Fix memory leak on unexpected end
	of file.  Fixes oss-fuzz 13556 "graphicsmagick/coder_MAT_fuzzer:
	Direct-leak in ReadMATImage". (Credit to OSS-Fuzz)

2019-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Quit if image scanlines are not
	fully populated due to exception.  Fixes oss-fuzz 13530
	"graphicsmagick/coder_MAT_fuzzer: Use-of-uninitialized-value in
	InsertComplexFloatRow". (Credit to OSS-Fuzz)

2019-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Don't start new line if x_max <
	x_min.  Avoids calling SetImagePixels() with a width of zero.
	Related to oss-fuzz 13521 "graphicsmagick/coder_TEXT_fuzzer:
	Floating-point-exception in SetNexus". (Credit to OSS-Fuzz)

	* magick/pixel_cache.c (SetNexus): Report error for empty region
	rather than crashing due to divide by zero exception. This is a
	new bug due to yesterday's changes.  Fixes oss-fuzz 13521
	"graphicsmagick/coder_TEXT_fuzzer: Floating-point-exception in
	SetNexus". (Credit to OSS-Fuzz)

2019-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* design/pixel-cache.dot: Update design dot diagram to remove
	IsNexusInCore and add CompositeCacheNexus.

	* magick/pixel_cache.c (SetNexus): Apply resource limits to pixel
	nexus allocations using the same limits (total pixels, width,
	height, memory) as applied to the whole image since some requests
	are directly influenced by the input file.  Add yet more tests for
	arithmetic overflow.  Whole source module is re-arranged so that
	static functions are in order of dependency so that forward
	prototype declarations are no longer needed.  Fixes oss-fuzz 13210
	"graphicsmagick/coder_MVG_fuzzer: Integer-overflow in
	SetNexus". (Credit to OSS-Fuzz)

2019-03-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Use unsigned 64-bit value to