@@ -38,6 +38,9 @@
 <p>2019-03-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/import.c (ImportViewPixelArea): If range between max and
+min is less than MagickEpsilon, produce a black image rather than
+throwing an exception.</li>
 <li>coders/mat.c (ReadMATImage): Fix memory leak on unexpected end
 of file.  Fixes oss-fuzz 13556 &quot;graphicsmagick/coder_MAT_fuzzer:
 Direct-leak in ReadMATImage&quot;. (Credit to OSS-Fuzz)</li>
